@@ -30,6 +30,6 @@
 int
 v_redraw(SCR *sp, VICMD *vp)
 {
-	    F_SET(sp, SC_SCR_REFORMAT);
+        F_SET(sp, SC_SCR_REFORMAT);
         return (sp->gp->scr_refresh(sp, 1));
 }
