@@ -1,4 +1,5 @@
-OpenVi 7.0.15 -> OpenVi 7.1.16: Fri Feb 25 22:40:43 2022
+OpenVi 7.0.15 -> OpenVi 7.1.16: Sun Feb 27 05:42:39 2022
+        + Apply `expandtab` to lines filtered with the `!` command, via `nvi2`
         + OpenBSD 7.1 enters beta; bumping OpenBSD version to 7.1
         + Modify text `%s/OpenBSD vi/OpenVi/` in `common/recover.c`
         + Minor updates to documentation and `README.md`
